--- a/4-Implementacao/4.1-Codigo_Fonte/public/css/custom.css
+++ b/4-Implementacao/4.1-Codigo_Fonte/public/css/custom.css
@@ -22,3 +22,14 @@
     opacity: 1;
     height: 100%;
 }
+
+.loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7);
+}
