--- a/4-Implementacao/4.1-Codigo_Fonte/public/css/custom.css
+++ b/4-Implementacao/4.1-Codigo_Fonte/public/css/custom.css
@@ -33,3 +33,9 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 0.7);
 }
+
+.search-btn {
+    border: 0;
+    background-color: rgba(0,0,0,0);
+    color: white;
+}
